--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "pylogics"
-version = "0.2.1"
+name = "pylogics_modalities"
+version = "0.2.2"
 description = "A Python library for logic formalisms representation and manipulation."
 authors = ["MarcoFavorito <marco.favorito@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://whitemech.github.io/pylogics"
-repository = "https://github.com/whitemech/pylogics.git"
+repository = "https://github.com/danielaisen/pylogics_modalities.git"
 documentation = "https://whitemech.github.io/pylogics"
 keywords = [
     "logic",
@@ -33,8 +33,8 @@ include = []
 #script_name = 'path/to/script'
 
 [tool.poetry.urls]
-"Bug Tracker" = "https://github.com/whitemech/pylogics/issues"
-"Pull Requests" = "https://github.com/whitemech/pylogics/pulls"
+"Bug Tracker" = "https://github.com/whitemech/pylogics_modalities/issues"
+"Pull Requests" = "https://github.com/whitemech/pylogics_modalities/pulls"
 
 
 [tool.poetry.dependencies]
